--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ h2 {
 
 .four-container {
   color: #FFFFFF;
-  background-image: url('D:/Web Development/myTunes Project/images/section-bg.jpeg');
+  background-image: url('section-bg.jpeg');
   background-repeat: no-repeat;
   background-position: bottom;
   background-color: black;
